<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_bookmark"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_about_page"
            android:icon="@drawable/ic_menu_about_page"
            android:title="@string/menu_about_page" />
        <!--
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/about_icon_email"
            android:title="@string/menu_email" />
         -->
    </group>
</menu>