<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_page"
        android:orderInCategory="101"
        android:icon="@drawable/ic_menu_about_page"
        android:title="@string/action_about_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_email"
        android:orderInCategory="102"
        android:icon="@drawable/about_icon_email"
        android:title="@string/menu_email"
        app:showAsAction="never" />
</menu>